show documents as loaded from config

BUG: 353373